export const snapshot = {};

snapshot[`Issue View Command - Help Text 1`] = `
stdout:
"
Usage: view [issueId]

Description:

  View issue details with all comments and attachments, or open in browser/app. For project, assignee and state changes, use issue history.

Options:

  -h, --help               - Show this help.                                                               
  -w, --web                - Open in web browser                                                           
  -a, --app                - Open in Linear.app                                                            
  --no-comments            - Exclude comments from the output                                              
  --show-resolved-threads  - Include resolved comment threads in the output                                
  --no-pager               - Disable automatic paging for long output                                      
  -j, --json               - Output issue data as JSON; comments and attachments retain {nodes, pageInfo}  
  --no-download            - Keep remote URLs instead of downloading files                                 

"
stderr:
""
`;

snapshot[`Issue View Command - With Mock Server Terminal No Comments 1`] = `
stdout:
"# TEST-123: Fix authentication bug in login flow

**State:** In Progress | **Priority:** --- | **Assignee:** Unassigned

Users are experiencing issues logging in when their session expires. This affects the main authentication flow and needs to be resolved quickly.

## Steps to reproduce
1. Log in to the application
2. Wait for session to expire
3. Try to perform an authenticated action
4. Observe the error

## Expected behavior
User should be redirected to login page with clear messaging.

## Actual behavior
User sees cryptic error message and gets stuck.
"
stderr:
""
`;

snapshot[`Issue View Command - With No Comments Flag 1`] = `
stdout:
"# TEST-123: Fix authentication bug in login flow

**State:** In Progress | **Priority:** ▄▆█ | **Assignee:** @Jane Smith

Users are experiencing issues logging in when their session expires.
"
stderr:
""
`;

snapshot[`Issue View Command - With Comments Default 1`] = `
stdout:
"# TEST-123: Fix authentication bug in login flow

**State:** In Progress | **Priority:** ⚠⚠⚠ | **Assignee:** @John Doe

Users are experiencing issues logging in when their session expires.

## Comments

- **@John Doe** - *1/15/2024* [thread: comment-1]

  I've reproduced this issue on staging. The session timeout seems to be too aggressive.

  - **@Jane Smith** - *1/15/2024*

    Working on a fix. Will increase the session timeout and add proper error handling.

  - **@Alice Developer** - *1/15/2024*

    Sounds good! Also, we should add better error messaging for expired sessions.

- **@Bob Senior** - *1/15/2024* [thread: comment-4]

  Should we also consider implementing automatic session refresh?


"
stderr:
""
`;

snapshot[`Issue View Command - With Documents And Attachments 1`] = `
stdout:
"# TEST-246: Audit issue resource output

**State:** In Progress | **Priority:** ▄▆█ | **Assignee:** @Jane Smith

Ensure issue view shows both attachments and documents.

## Attachments

- **Design mock**: https://example.com/design-mock _[figma]_
  _Figma file_


## Documents

- **Implementation plan**: https://linear.app/test-team/document/implementation-plan-impl-plan-123
- **QA checklist**: https://linear.app/test-team/document/qa-checklist-qa-checklist-456

"
stderr:
""
`;

snapshot[`Issue View Command - Issue Not Found 1`] = `
stdout:
""
stderr:
"✗ Failed to view issue: Issue not found: TEST-999
"
`;

snapshot[`Issue View Command - JSON Output No Comments 1`] = `
stdout:
'{
  "organization": {
    "id": "99999999-9999-4999-8999-999999999999",
    "urlKey": "test-team"
  },
  "issue": {
    "archivedAt": null,
    "trashed": false,
    "priority": 3,
    "estimate": null,
    "dueDate": null,
    "assignee": null,
    "project": null,
    "projectMilestone": null,
    "cycle": null,
    "parent": null,
    "labels": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    },
    "children": {
      "nodes": []
    },
    "relations": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "inverseRelations": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "documents": {
      "nodes": []
    },
    "id": "11111111-1111-4111-8111-000000000123",
    "team": {
      "id": "22222222-2222-4222-8222-222222222222",
      "key": "TEST",
      "activeCycle": null
    },
    "identifier": "TEST-123",
    "title": "Fix authentication bug in login flow",
    "description": "Users are experiencing issues logging in when their session expires.",
    "url": "https://linear.app/test-team/issue/TEST-123/fix-authentication-bug-in-login-flow",
    "branchName": "fix/test-123-auth-bug",
    "state": {
      "id": "33333333-3333-4333-8333-333333333333",
      "type": "started",
      "name": "In Progress",
      "color": "#f87462"
    },
    "attachments": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue View Command - JSON Output With Labels 1`] = `
stdout:
'{
  "organization": {
    "id": "99999999-9999-4999-8999-999999999999",
    "urlKey": "test-team"
  },
  "issue": {
    "archivedAt": null,
    "trashed": false,
    "priority": 0,
    "estimate": null,
    "dueDate": null,
    "assignee": null,
    "project": null,
    "projectMilestone": null,
    "cycle": null,
    "parent": null,
    "labels": {
      "nodes": [
        {
          "id": "label-1",
          "name": "bug",
          "color": "#e5484d"
        },
        {
          "id": "label-2",
          "name": "priority:high",
          "color": "#f5a524"
        }
      ],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    },
    "children": {
      "nodes": []
    },
    "relations": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "inverseRelations": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "documents": {
      "nodes": []
    },
    "id": "11111111-1111-4111-8111-000000000123",
    "team": {
      "id": "22222222-2222-4222-8222-222222222222",
      "key": "TEST",
      "activeCycle": null
    },
    "identifier": "TEST-123",
    "title": "Fix authentication bug in login flow",
    "description": "Users are experiencing issues logging in when their session expires.",
    "url": "https://linear.app/test-team/issue/TEST-123/fix-authentication-bug-in-login-flow",
    "branchName": "fix/test-123-auth-bug",
    "state": {
      "id": "33333333-3333-4333-8333-333333333333",
      "type": "started",
      "name": "In Progress",
      "color": "#f87462"
    },
    "attachments": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue View Command - JSON Output With Comments 1`] = `
stdout:
\`{
  "organization": {
    "id": "99999999-9999-4999-8999-999999999999",
    "urlKey": "test-team"
  },
  "issue": {
    "archivedAt": null,
    "trashed": false,
    "priority": 2,
    "estimate": null,
    "dueDate": null,
    "assignee": {
      "id": "44444444-4444-4444-8444-444444444444",
      "name": "jane.smith",
      "displayName": "Jane Smith"
    },
    "project": null,
    "projectMilestone": null,
    "cycle": null,
    "parent": null,
    "labels": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    },
    "children": {
      "nodes": []
    },
    "relations": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "inverseRelations": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "documents": {
      "nodes": []
    },
    "id": "11111111-1111-4111-8111-000000000123",
    "team": {
      "id": "22222222-2222-4222-8222-222222222222",
      "key": "TEST",
      "activeCycle": null
    },
    "identifier": "TEST-123",
    "title": "Fix authentication bug in login flow",
    "description": "Users are experiencing issues logging in when their session expires.",
    "url": "https://linear.app/test-team/issue/TEST-123/fix-authentication-bug-in-login-flow",
    "branchName": "fix/test-123-auth-bug",
    "state": {
      "id": "33333333-3333-4333-8333-333333333333",
      "type": "started",
      "name": "In Progress",
      "color": "#f87462"
    },
    "comments": {
      "nodes": [
        {
          "updatedAt": "2024-01-15T10:30:00Z",
          "url": "https://linear.app/issue/TEST-123#comment-1",
          "resolvedAt": null,
          "resolvingCommentId": null,
          "resolvingUser": null,
          "id": "comment-1",
          "body": "I've reproduced this issue on staging. The session timeout seems to be too aggressive.",
          "createdAt": "2024-01-15T10:30:00Z",
          "user": {
            "name": "john.doe",
            "displayName": "John Doe"
          },
          "externalUser": null,
          "parent": null
        },
        {
          "updatedAt": "2024-01-15T14:22:00Z",
          "url": "https://linear.app/issue/TEST-123#comment-2",
          "resolvedAt": null,
          "resolvingCommentId": null,
          "resolvingUser": null,
          "id": "comment-2",
          "body": "Working on a fix. Will increase the session timeout and add proper error handling.",
          "createdAt": "2024-01-15T14:22:00Z",
          "user": {
            "name": "jane.smith",
            "displayName": "Jane Smith"
          },
          "externalUser": null,
          "parent": {
            "id": "comment-1"
          }
        }
      ],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    },
    "attachments": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    }
  }
}
\`
stderr:
""
`;

snapshot[`Issue View Command - JSON Output With Documents And Attachments 1`] = `
stdout:
'{
  "organization": {
    "id": "99999999-9999-4999-8999-999999999999",
    "urlKey": "test-team"
  },
  "issue": {
    "archivedAt": null,
    "trashed": false,
    "priority": 2,
    "estimate": null,
    "dueDate": null,
    "assignee": {
      "id": "44444444-4444-4444-8444-444444444444",
      "name": "jane.smith",
      "displayName": "Jane Smith"
    },
    "project": null,
    "projectMilestone": null,
    "cycle": null,
    "parent": null,
    "labels": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    },
    "children": {
      "nodes": []
    },
    "relations": {
      "nodes": [
        {
          "id": "relation-outgoing",
          "type": "blocks",
          "relatedIssue": {
            "identifier": "TEST-247",
            "title": "Blocked follow-up"
          }
        }
      ],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "inverseRelations": {
      "nodes": [
        {
          "id": "relation-incoming",
          "type": "related",
          "issue": {
            "identifier": "TEST-245",
            "title": "Related investigation"
          }
        }
      ],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "documents": {
      "nodes": [
        {
          "id": "document-1",
          "title": "Implementation plan",
          "slugId": "impl-plan-123",
          "url": "https://linear.app/test-team/document/implementation-plan-impl-plan-123",
          "createdAt": "2024-01-15T09:30:00Z",
          "updatedAt": "2024-01-15T09:45:00Z"
        },
        {
          "id": "document-2",
          "title": "QA checklist",
          "slugId": "qa-checklist-456",
          "url": "https://linear.app/test-team/document/qa-checklist-qa-checklist-456",
          "createdAt": "2024-01-15T09:00:00Z",
          "updatedAt": "2024-01-15T09:15:00Z"
        }
      ]
    },
    "id": "11111111-1111-4111-8111-000000000246",
    "team": {
      "id": "22222222-2222-4222-8222-222222222222",
      "key": "TEST",
      "activeCycle": null
    },
    "identifier": "TEST-246",
    "title": "Audit issue resource output",
    "description": "Ensure issue view shows both attachments and documents.",
    "url": "https://linear.app/test-team/issue/TEST-246/audit-issue-resource-output",
    "branchName": "test-246-issue-resource-output",
    "state": {
      "id": "33333333-3333-4333-8333-333333333333",
      "type": "started",
      "name": "In Progress",
      "color": "#f87462"
    },
    "attachments": {
      "nodes": [
        {
          "id": "attachment-1",
          "title": "Design mock",
          "url": "https://example.com/design-mock",
          "subtitle": "Figma file",
          "sourceType": "figma",
          "metadata": {},
          "createdAt": "2024-01-15T10:30:00Z"
        }
      ],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue View Command - With Parent And Sub-issues 1`] = `
stdout:
"# TEST-456: Implement user authentication

**State:** In Progress | **Priority:** ▄▆█ | **Assignee:** @Alice Developer

Add user authentication to the application.

## Parent

- **TEST-100**: Epic: Security Improvements _[In Progress]_


## Sub-issues

- **TEST-457**: Add login form _[Done]_
- **TEST-458**: Add password reset flow _[Todo]_
- **TEST-459**: Add OAuth support _[In Progress]_

"
stderr:
""
`;

snapshot[`Issue View Command - With Project And Milestone 1`] = `
stdout:
"# TEST-789: Add monitoring dashboards

**State:** In Progress | **Priority:** ▄▆  | **Assignee:** @Bob Senior | **Project:** Platform Infrastructure Q1 | **Milestone:** Phase 2: Observability

Set up Datadog dashboards for the new service.
"
stderr:
""
`;

snapshot[`Issue View Command - With Cycle 1`] = `
stdout:
"# TEST-890: Implement rate limiting

**State:** Todo | **Priority:** ▄   | **Assignee:** Unassigned | **Project:** API Gateway v2 | **Cycle:** #7 Sprint 7 (now)

Add rate limiting to the API gateway.
"
stderr:
""
`;

snapshot[`Issue View Command - With Upcoming Cycle And No Active Cycle 1`] = `
stdout:
"# TEST-891: Tune rate limit thresholds

**State:** Todo | **Priority:** ▄   | **Assignee:** Unassigned | **Cycle:** #8 (+1)

Follow-up tuning work.
"
stderr:
""
`;

snapshot[`Issue View Command - Hides Resolved Threads By Default 1`] = `
stdout:
"# TEST-321: Audit resolved comment thread output

**State:** In Progress | **Priority:** ▄▆█ | **Assignee:** Unassigned

Check how issue view handles resolved comment threads.

## Comments

- **@John Doe** - *1/15/2024* [thread: comment-root-open]

  Open thread root comment.

  - **@Jane Smith** - *1/15/2024*

    Reply on the open thread.



Resolved thread hidden: 1. Use --show-resolved-threads to show them.
"
stderr:
""
`;

snapshot[`Issue View Command - Show Resolved Threads 1`] = `
stdout:
"# TEST-321: Audit resolved comment thread output

**State:** In Progress | **Priority:** ▄▆█ | **Assignee:** Unassigned

Check how issue view handles resolved comment threads.

## Comments

- **@John Doe** - *1/15/2024* [thread: comment-root-open]

  Open thread root comment.

  - **@Jane Smith** - *1/15/2024*

    Reply on the open thread.

- **@Alice Developer** - *1/15/2024* [thread: comment-root-resolved] [resolved]

  Resolved thread root comment.


"
stderr:
""
`;

snapshot[`Issue View Command - JSON Output With Resolved Thread Metadata 1`] = `
stdout:
'{
  "organization": {
    "id": "99999999-9999-4999-8999-999999999999",
    "urlKey": "test-team"
  },
  "issue": {
    "archivedAt": null,
    "trashed": false,
    "priority": 0,
    "estimate": null,
    "dueDate": null,
    "assignee": null,
    "project": null,
    "projectMilestone": null,
    "cycle": null,
    "parent": null,
    "labels": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    },
    "children": {
      "nodes": []
    },
    "relations": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "inverseRelations": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "documents": {
      "nodes": []
    },
    "id": "11111111-1111-4111-8111-000000000654",
    "team": {
      "id": "22222222-2222-4222-8222-222222222222",
      "key": "TEST",
      "activeCycle": null
    },
    "identifier": "TEST-654",
    "title": "Expose resolved thread metadata",
    "description": "Test JSON output for resolved thread data.",
    "url": "https://linear.app/test-team/issue/TEST-654/expose-resolved-thread-metadata",
    "branchName": "test-654-resolved-thread-json",
    "state": {
      "id": "33333333-3333-4333-8333-333333333333",
      "type": "backlog",
      "name": "Backlog",
      "color": "#bec2c8"
    },
    "comments": {
      "nodes": [
        {
          "updatedAt": "2024-01-15T10:30:00Z",
          "url": "https://linear.app/issue/TEST-654#comment-root-json",
          "resolvedAt": "2024-01-15T11:00:00Z",
          "resolvingCommentId": null,
          "resolvingUser": {
            "name": "john.doe",
            "displayName": "John Doe"
          },
          "id": "comment-root-json",
          "body": "Resolved root comment.",
          "createdAt": "2024-01-15T10:30:00Z",
          "user": {
            "name": "john.doe",
            "displayName": "John Doe"
          },
          "externalUser": null,
          "parent": null
        },
        {
          "updatedAt": "2024-01-15T10:45:00Z",
          "url": "https://linear.app/issue/TEST-654#comment-reply-json",
          "resolvedAt": null,
          "resolvingCommentId": null,
          "resolvingUser": null,
          "id": "comment-reply-json",
          "body": "Reply under the resolved thread.",
          "createdAt": "2024-01-15T10:45:00Z",
          "user": {
            "name": "jane.smith",
            "displayName": "Jane Smith"
          },
          "externalUser": null,
          "parent": {
            "id": "comment-root-json"
          }
        }
      ],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    },
    "attachments": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue View Command - JSON Output With Labels And Comments 1`] = `
stdout:
'{
  "organization": {
    "id": "99999999-9999-4999-8999-999999999999",
    "urlKey": "test-team"
  },
  "issue": {
    "archivedAt": null,
    "trashed": false,
    "priority": 2,
    "estimate": null,
    "dueDate": null,
    "assignee": {
      "id": "44444444-4444-4444-8444-444444444444",
      "name": "jane.smith",
      "displayName": "Jane Smith"
    },
    "project": null,
    "projectMilestone": null,
    "cycle": null,
    "parent": null,
    "labels": {
      "nodes": [
        {
          "id": "label-1",
          "name": "bug",
          "color": "#e5484d"
        },
        {
          "id": "label-2",
          "name": "priority:high",
          "color": "#f5a524"
        }
      ],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    },
    "children": {
      "nodes": []
    },
    "relations": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "inverseRelations": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false
      }
    },
    "documents": {
      "nodes": []
    },
    "id": "11111111-1111-4111-8111-000000000123",
    "team": {
      "id": "22222222-2222-4222-8222-222222222222",
      "key": "TEST",
      "activeCycle": null
    },
    "identifier": "TEST-123",
    "title": "Fix authentication bug in login flow",
    "description": "Users are experiencing issues logging in when their session expires.",
    "url": "https://linear.app/test-team/issue/TEST-123/fix-authentication-bug-in-login-flow",
    "branchName": "fix/test-123-auth-bug",
    "state": {
      "id": "33333333-3333-4333-8333-333333333333",
      "type": "started",
      "name": "In Progress",
      "color": "#f87462"
    },
    "comments": {
      "nodes": [
        {
          "updatedAt": "2024-01-15T10:30:00Z",
          "url": "https://linear.app/issue/TEST-123#comment-1",
          "resolvedAt": null,
          "resolvingCommentId": null,
          "resolvingUser": null,
          "id": "comment-1",
          "body": "Reproduced on staging.",
          "createdAt": "2024-01-15T10:30:00Z",
          "user": {
            "name": "john.doe",
            "displayName": "John Doe"
          },
          "externalUser": null,
          "parent": null
        }
      ],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    },
    "attachments": {
      "nodes": [],
      "pageInfo": {
        "hasNextPage": false,
        "endCursor": null
      }
    }
  }
}
'
stderr:
""
`;
